--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.2.2",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.3",
+    "typewriter-effect": "^2.18.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
